--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Real Text Generator</title>
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <img src="img/default.png" alt="" />
+        <ul>
+          <li>
+            <a
+              href="https://github.com/RakibRahman/real-text-generator"
+              target="_blank"
+              >⭐ on Github</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="inputArea">
+        <label for="wordsLength">
+          <input type="number" name="wordsLength" id="wordsLength" value="10" />
+        </label>
+        <label for="parasLength">
+          <input type="number" name="wordsLength" id="parasLength" value="3" />
+        </label>
+      </div>
+      <button>Generate</button>
+      <div class="output"></div>
+    </main>
+    <script src="text.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
